# apps/server/pkg/middleware/auth.go
@@ -2,6 +2,7 @@ package middleware
 
 import (
 	"context"
+	"log"
 	"net/http"
 
 	"github.com/aidan-neel/shulker/apps/server/pkg/utils"
@@ -10,13 +11,14 @@ import (
 type contextKey string
 
 const userIDKey contextKey = "userID"
+const responseWriterKey contextKey = "response_writer"
 
 func AuthMiddleware(next http.Handler) http.Handler {
 	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
-		token := r.Header.Get("Authorization")
+		cookie, err := r.Cookie("access_token")
 
-		if token != "" {
-			userID, err := utils.ValidateToken(token, "access")
+		if err == nil {
+			userID, err := utils.ValidateToken(cookie.Value, "access")
 			if err == nil {
 				ctx := context.WithValue(r.Context(), userIDKey, userID)
 				r = r.WithContext(ctx)
@@ -24,6 +26,42 @@ func AuthMiddleware(next http.Handler) http.Handler {
 		}
 
 		next.ServeHTTP(w, r)
+	})
+}
+
+func InjectResponseWriter(next http.Handler) http.Handler {
+	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
+		ctx := context.WithValue(r.Context(), responseWriterKey, w)
+		next.ServeHTTP(w, r.WithContext(ctx))
+	})
+}
+
+func SetAuthCookies(ctx context.Context, accessToken, refreshToken string) {
+	w, ok := ctx.Value(responseWriterKey).(http.ResponseWriter)
+	if !ok {
+		log.Println("❌ no response writer in context")
+		return
+	}
+	log.Println("✅ got response writer, setting cookies")
+
+	http.SetCookie(w, &http.Cookie{
+		Name:     "access_token",
+		Value:    accessToken,
+		HttpOnly: true,
+		Secure:   false,
+		SameSite: http.SameSiteLaxMode,
+		Path:     "/",
+		MaxAge:   15 * 60,
+	})
+
+	http.SetCookie(w, &http.Cookie{
+		Name:     "refresh_token",
+		Value:    refreshToken,
+		HttpOnly: true,
+		Secure:   false,
+		SameSite: http.SameSiteLaxMode,
+		Path:     "/",
+		MaxAge:   7 * 24 * 60 * 60,
 	})
 }
 
