# apps/server/src/auth/handler.go
@@ -6,6 +6,8 @@ import (
 	"connectrpc.com/connect"
 	authv1 "github.com/aidan-neel/shulker/apps/proto/gen/go/auth"
 	"github.com/aidan-neel/shulker/apps/proto/gen/go/auth/authconnect"
+	commonv1 "github.com/aidan-neel/shulker/apps/proto/gen/go/common"
+	"github.com/aidan-neel/shulker/apps/server/pkg/middleware"
 )
 
 type Handler struct {
@@ -21,15 +23,25 @@ var _ authconnect.AuthServiceHandler = (*Handler)(nil)
 func (h *Handler) Register(
 	ctx context.Context,
 	req *connect.Request[authv1.RegisterRequest],
-) (*connect.Response[authv1.RegisterResponse], error) {
+) (*connect.Response[authv1.RegisterResult], error) {
+
 	u, err := h.service.Register(ctx, req.Msg.Email, req.Msg.Password)
 	if err != nil {
-		return nil, connect.NewError(connect.CodeInvalidArgument, err)
+		return connect.NewResponse(&authv1.RegisterResult{
+			Result: &authv1.RegisterResult_Error{
+				Error: &commonv1.ErrorResponse{
+					Code:    "INVALID_ARGUMENT",
+					Message: err.Error(),
+				},
+			},
+		}), nil
 	}
-	return connect.NewResponse(&authv1.RegisterResponse{
-		Token: &authv1.Token{
-			AccessToken:  u.AccessToken,
-			RefreshToken: u.RefreshToken,
+
+	middleware.SetAuthCookies(ctx, u.AccessToken, u.RefreshToken)
+
+	return connect.NewResponse(&authv1.RegisterResult{
+		Result: &authv1.RegisterResult_Success{
+			Success: &authv1.RegisterResponse{},
 		},
 	}), nil
 }
@@ -37,15 +49,25 @@ func (h *Handler) Register(
 func (h *Handler) Login(
 	ctx context.Context,
 	req *connect.Request[authv1.LoginRequest],
-) (*connect.Response[authv1.LoginResponse], error) {
+) (*connect.Response[authv1.LoginResult], error) {
+
 	u, err := h.service.Login(ctx, req.Msg.Email, req.Msg.Password)
 	if err != nil {
-		return nil, connect.NewError(connect.CodeInvalidArgument, err)
+		return connect.NewResponse(&authv1.LoginResult{
+			Result: &authv1.LoginResult_Error{
+				Error: &commonv1.ErrorResponse{
+					Code:    "INVALID_ARGUMENT",
+					Message: err.Error(),
+				},
+			},
+		}), nil
 	}
-	return connect.NewResponse(&authv1.LoginResponse{
-		Token: &authv1.Token{
-			AccessToken:  u.AccessToken,
-			RefreshToken: u.RefreshToken,
+
+	middleware.SetAuthCookies(ctx, u.AccessToken, u.RefreshToken)
+
+	return connect.NewResponse(&authv1.LoginResult{
+		Result: &authv1.LoginResult_Success{
+			Success: &authv1.LoginResponse{},
 		},
 	}), nil
 }
